@@ -1,5 +1,7 @@
 //it's lazy updated file, so the real ChangeLog is the activity on github
 
++ Fn - Case - Capitalize sentences
+
 + qt 4.x compat again
 
 * Spellcheker module rewrite
